--- a/src/css/global.css
+++ b/src/css/global.css
@@ -7,6 +7,7 @@
 
 :root {
     --background: #252525;
+    --footer-background: #121212;
     --white: #fff;
 }
 
@@ -20,6 +21,24 @@ body {
     background-color: var(--background) !important;
     color: var(--white) !important;
     overflow-x: hidden;
+    position: relative;
+}
+
+body::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url("../assets/img/background-effect.jpg");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    background-attachment: fixed;
+    backdrop-filter: blur(5px);
+    opacity: 0.1;
+    z-index: -1;
 }
 
 .customized-button {
@@ -30,6 +49,7 @@ body {
     color: white;
     margin: 10px;
     cursor: pointer;
+    white-space: nowrap;
 }
 
     .customized-button:hover {
@@ -45,3 +65,11 @@ body {
         background: rgb(223, 223, 223);
         border: 2px solid rgb(223, 223, 223);
     }
+
+input {
+    padding: 12px;
+    border: none;
+    height: 48px;
+    margin: auto;
+    width: 100%;
+}
