--- a/src/css/global.css
+++ b/src/css/global.css
@@ -66,10 +66,55 @@ body::after {
         border: 2px solid rgb(223, 223, 223);
     }
 
+.button-black {
+    background: black;
+    color: white;
+    border: 2px solid black;
+}
+
+    .button-black:hover {
+        background: rgb(27, 27, 27);
+        border: 2px solid rgb(27, 27, 27);
+    }
+
 input {
     padding: 12px;
     border: none;
     height: 48px;
     margin: auto;
     width: 100%;
+}
+
+.principal {
+    height: 50vh;
+    background: url("../assets/img/ieq-farol.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    position: relative;
+}
+
+    .principal h1, .principal h3 {
+        z-index: 2;
+        position: relative;
+    }
+
+    .principal:not(.hero)::after {
+        position: absolute;
+        content: '';
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        background: linear-gradient(transparent, black);
+        z-index: 1;
+        transition: all 0.4s;
+    }
+
+.principal-text {
+    margin: 4rem 0 0 calc(1rem + 5vw);
+}
+
+.section-title {
+    font-size: 20px;
 }
