--- a/src/css/global.css
+++ b/src/css/global.css
@@ -54,6 +54,7 @@ body::after {
 
     .customized-button:hover {
         background: rgba(250, 250, 250, 0.2);
+        text-decoration: none;
     }
 
 .button-white {
@@ -63,6 +64,7 @@ body::after {
 
     .button-white:hover {
         background: rgb(223, 223, 223);
+        color: black;
         border: 2px solid rgb(223, 223, 223);
     }
 
@@ -74,6 +76,7 @@ body::after {
 
     .button-black:hover {
         background: rgb(27, 27, 27);
+        color: white;
         border: 2px solid rgb(27, 27, 27);
     }
 
@@ -86,7 +89,8 @@ input {
 }
 
 .principal {
-    height: 50vh;
+    min-height: 50vh;
+    height: fit-content;
     background: url("../assets/img/ieq-farol.png");
     background-repeat: no-repeat;
     background-size: cover;
@@ -97,6 +101,14 @@ input {
     .principal h1, .principal h3 {
         z-index: 2;
         position: relative;
+    }
+
+    .principal h1 {
+        font-size: 2rem;
+    }
+
+    .principal h3 {
+        font-size: 1.3rem;
     }
 
     .principal:not(.hero)::after {
@@ -112,9 +124,17 @@ input {
     }
 
 .principal-text {
-    margin: 4rem 0 0 calc(1rem + 5vw);
+    margin-left: calc(1vw + 2rem);
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
 .section-title, .title {
     font-size: 20px;
+}
+
+@media (max-width: 768px) {
+    .principal-text {
+        margin-left: 0;
+    }
 }
